src/components/Project/style.css
div.project {
  flex-direction: column;
  background-color: #f6eabd;
  border: 1px #f6eabd solid;
  margin-top: 10px;
}

div.project > a {
  width: calc(100% - 22px);
  margin: 10px;
}

.project-img {
  display: block;
  width: 100%;
  height: auto;
  border-radius: 10px;
  border: 1px #f6eabd solid;
}

div.project > section.info {
  margin: 0 10px 10px 10px;
  background-color: #fbf8c5e5;
}

p.name {
  margin: 16px 8px;
}

p.name > a {
  font-weight: bold;
  color: black;
}

p.description {
  padding: 0 10px;
  font-size: 14px;
}

div.tech {
  margin: 16px 5px;
}

img.tech {
  max-height: 40px;
  padding: 4px;
  border-radius: 5px;
  border: 1px #f6eabd solid;
  margin: 0 5px;
}

img.tech:first-child:nth-last-child(1) {
  max-width: calc(100% - 20px);
}

img.tech:first-child:nth-last-child(2),
img.tech:first-child:nth-last-child(2) ~ img.tech {
  width: calc(50% - 20px);
}

img.tech:first-child:nth-last-child(3),
img.tech:first-child:nth-last-child(3) ~ img.tech {
  width: calc(100%/3 - 20px);
}

img.tech:first-child:nth-last-child(4),
img.tech:first-child:nth-last-child(4) ~ img.tech {
  width: calc(25% - 20px);
}

img.tech:first-child:nth-last-child(5),
img.tech:first-child:nth-last-child(5) ~ img.tech {
  width: calc(20% - 20px);
}

img.tech:first-child:nth-last-child(6),
img.tech:first-child:nth-last-child(6) ~ img.tech {
  width: calc(50%/3 - 20px);
}

@media screen and (max-width: 600px) {
  div.tech {
    display: table;
    width: calc(100% - 10px);
  }

  img.tech {
    height: 30px;
  }

  img.tech:first-child:nth-last-child(1) {
    width: calc(75% - 20px);
    height: auto;
  }

  img.tech:first-child:nth-last-child(4),
  img.tech:first-child:nth-last-child(4) ~ img.tech {
    width: calc(50% - 20px);
  }

  img.tech:first-child:nth-last-child(5),
  img.tech:first-child:nth-last-child(5) ~ img.tech,
  img.tech:first-child:nth-last-child(6),
  img.tech:first-child:nth-last-child(6) ~ img.tech {
    width: calc(100%/3 - 20px);
  }
}

